tp/tp3-cataas-svc.yml
apiVersion: v1
kind: Service

metadata:
  name: cataas-svc

spec:
  selector:
    app: cataas
  ports:
    - port: 8080
      targetPort: 3000
