tp/tp4-cataas-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress

metadata:
  name: cataas-ingress
  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  rules:
    - host: <Put the public DNS name of the node running traefik here, something like ec2-35-180-127-98.eu-west-3.compute.amazonaws.com>
      http:
        paths:
          - backend:
              serviceName: cataas-svc
              servicePort: 8080
